--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,21 +1,36 @@
 server:
   port: 8080
 spring:
+#  mysql数据源
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
     url: jdbc:mysql://localhost:3306/take_away
     username: root
     password: 123456
   mvc:
+#    开启ant路径匹配风格
     pathmatch:
       matching-strategy: ant_path_matcher
   servlet:
     multipart:
       max-file-size: 10MB
       max-request-size: 200MB
+#      redis配置项
+  redis:
+    host: 192.168.110.128
+    port: 6379
+    password: 123456
+    database: 7
+    jedis:
+      pool:
+        max-wait: 1ms
+#        mybatis-plus配置项
 mybatis-plus:
   configuration:
+#    开启mybatis-plus 驼峰命名制
     map-underscore-to-camel-case: true
+#    mybatis-plus 日志
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+#    菜品（套餐）图片路径配置项
 img:
   path: D:\java\java-addvance\take_away\img\
