--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,21 +1,58 @@
 server:
   port: 8080
 spring:
-#  mysql数据源
-  datasource:
-    driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/take_away
-    username: root
-    password: 123456
+  shardingsphere:
+      datasource:
+        names: master,slave
+  #      主库数据源
+        master:
+           type: com.alibaba.druid.pool.DruidDataSource
+           driver-class-name: com.mysql.jdbc.Driver
+           url: jdbc:mysql://localhost:3306/take_away?useSSL= false
+           username: root
+           password: 123456
+  #      从数据库
+        slave:
+          type: com.alibaba.druid.pool.DruidDataSource
+          driver-class-name: com.mysql.jdbc.Driver
+          url: jdbc:mysql://192.168.110.128:3306/take_away?useSSL= false
+          username: root
+          password: root
+
+      masterslave:
+  #      读写分离配置
+        load-balance-algorithm-type: round_robin
+        name: dataSource
+        master-data-source-name: master
+        slave-data-source-names: slave
+      props:
+        sql:
+  #        开启sql显示
+          show: true
+
+
+
+  #  mysql数据源
+#  datasource:
+#    driver-class-name: com.mysql.jdbc.Driver
+#    url: jdbc:mysql://192.168.110.128:3306/take_away?useSSL= false
+#    username: root
+#    password: root
+#    type: com.alibaba.druid.pool.DruidDataSource
+#    druid:
+#      initial-size: 2 # 初始化时建立物理连接的个数。默认0
+#      max-active: 10 # 最大连接池数量，默认8
+#      in-idle: 1 # 最小连接池数量
+#      max-wait: 2000 # 获取连接时最大等待时间，单位毫秒。
   mvc:
-#    开启ant路径匹配风格
+    #    开启ant路径匹配风格
     pathmatch:
       matching-strategy: ant_path_matcher
   servlet:
     multipart:
       max-file-size: 10MB
       max-request-size: 200MB
-#      redis配置项
+  #      redis配置项
   redis:
     host: 192.168.110.128
     port: 6379
@@ -26,15 +63,22 @@ spring:
         max-wait: 1ms
   cache:
     redis:
-#      设置缓存的过期时间
+      #      设置缓存的过期时间
       time-to-live: 1800000
+#      打开bean类型覆盖
+  main:
+    allow-bean-definition-overriding: true
 #        mybatis-plus配置项
 mybatis-plus:
   configuration:
-#    开启mybatis-plus 驼峰命名制
+    #    开启mybatis-plus 驼峰命名制
     map-underscore-to-camel-case: true
-#    mybatis-plus 日志
+    #    mybatis-plus 日志
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+  global-config:
+#    使用默认选择的雪花算法生成随机id
+    db-config:
+      id-type: assign_id
 #    菜品（套餐）图片路径配置项
 img:
   path: D:\java\java-addvance\take_away\img\
